| Summary: | ASTERISK-29818: Build failure on NetBSD due to hmac function collision | ||
| Reporter: | Michał Górny (mgorny) | Labels: | |
| Date Opened: | 2021-12-24 03:54:47.000-0600 | Date Closed: | 2022-01-19 09:44:26.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | GIT | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | NetBSD 9.2 (amd64) | Attachments: | |
| Description: | When building Asterisk on NetBSD, the build fails with the following error:
{code} [CC] utils.c -> utils.o In file included from utils.c:50:0: /home/mgorny/asterisk/include/asterisk/sha1.h:302:12: error: conflicting types for 'hmac' extern int hmac(SHAversion whichSha, /* which SHA algorithm to use */ ^~~~ In file included from /home/mgorny/asterisk/include/asterisk/compat.h:41:0, from /home/mgorny/asterisk/include/asterisk.h:22, from utils.c:30: /usr/include/stdlib.h:305:10: note: previous declaration of 'hmac' was here ssize_t hmac(const char *, const void *, size_t, const void *, size_t, void *, ^~~~ {code} It seems that this function isn't actually used anywhere. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-12-24 03:54:47.945-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-01-19 09:44:27.056-0600 Change 17705 merged by Friendly Automation: include: Remove unimplemented HMAC declarations [https://gerrit.asterisk.org/c/asterisk/+/17705|https://gerrit.asterisk.org/c/asterisk/+/17705] By: Friendly Automation (friendly-automation) 2022-01-19 09:47:22.331-0600 Change 17900 merged by Friendly Automation: include: Remove unimplemented HMAC declarations [https://gerrit.asterisk.org/c/asterisk/+/17900|https://gerrit.asterisk.org/c/asterisk/+/17900] By: Friendly Automation (friendly-automation) 2022-01-19 09:48:23.819-0600 Change 17901 merged by Friendly Automation: include: Remove unimplemented HMAC declarations [https://gerrit.asterisk.org/c/asterisk/+/17901|https://gerrit.asterisk.org/c/asterisk/+/17901] By: Friendly Automation (friendly-automation) 2022-01-19 10:35:10.827-0600 Change 17902 merged by Joshua Colp: include: Remove unimplemented HMAC declarations [https://gerrit.asterisk.org/c/asterisk/+/17902|https://gerrit.asterisk.org/c/asterisk/+/17902] | ||